deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cae-webapp-deployment
  namespace: production
  labels:
    app: cae-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cae-webapp
  template:
    metadata:
      labels:
        app: cae-webapp
    spec:
      containers:
      - name: cae-webapp
        image: harbor.cae.anstat/library/site-anstat:latest
        ports:
        - containerPort: 80
